[metadata]
name = pycache
version = 0.0.1
author = Mathias R. Jessen
author_email = mathias@mrjessen.com
description = PSCache but python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IISResetMe/pycache
project_urls =
    Bug Tracker = https://github.com/IISResetMe/pycache/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[tool:pytest]
testpaths = tests
